Easter egg implemented

--- a/src/main.less
+++ b/src/main.less
@@ -17,6 +17,7 @@
 @import "components/loading/loading";
 @import "components/modal-confirm/modal-confirm";
 @import "components/modal-switch/modal-switch";
+@import "components/modal-image/modal-image";
 @import "components/option-panel/option-panel";
 @import "components/range/range";
 @import "components/select/select";
